Fixed Dark Mode Icon Issue in session new add

--- a/src/index.css
+++ b/src/index.css
@@ -103,6 +103,14 @@
     font-size: 120%;
   }
 
+    input[type="date"] {
+        color-scheme: light;
+    }
+
+    input[type="time"] {
+      color-scheme: light;
+    }
+
   .dark {
     --background: 215 35% 8%;
     --foreground: 210 20% 95%;
@@ -163,6 +171,14 @@
    --foreground: 0 0% 100%;
    --border: 0 0% 100%;
    --muted-foreground: 0 0% 90%;
+ }
+
+ .dark input[type="time"] {
+   color-scheme: dark;
+ }
+
+ .dark input[type="date"] {
+   color-scheme: dark;
  }
 }
 
@@ -270,6 +286,14 @@
     transform: scale(1);
   }
 }
+
+/* .dark input[type="date"]::-webkit-calendar-picker-indicator {
+  filter: invert(1);
+}
+
+.dark input[type="time"]::-webkit-calendar-picker-indicator {
+  filter: invert(1);
+} */
 
 
 input::-webkit-outer-spin-button,
